editAccountPage form validation for M3

--- a/COSC360_M3/CreatePage.html
+++ b/COSC360_M3/CreatePage.html
@@ -13,7 +13,7 @@
     <link href='https://fonts.googleapis.com/css?family=Aboreto' rel='stylesheet'>
     <!--Font Files-->
     <!-- Scripts -->
-    <script src="createPage.js"></script>
+    <script src="script/createPage.js"></script>
     <!-- Scripts -->
 
 </head>
